packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_if__component.snap
---
source: tests/vapor/v_if.rs
expression: code
---
import { createComponent as _createComponent } from "vue-jsx-vapor";
import { createIf as _createIf } from "vue";
(() => {
  const n0 = _createIf(() => foo, () => {
    const n2 = _createComponent(Comp);
    return n2;
  });
  return n0;
})();
